We get the expected performance for the low-rank EnKF, moving to the symmetric version with freestream

--- a/example2/Low-rank EnKF Vortex.ipynb
+++ b/example2/Low-rank EnKF Vortex.ipynb
@@ -763,13 +763,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate the initial condition\n",
     "\n",
-    "Ne = 50\n",
+    "Ne = 40\n",
     "Nx = 3*config.Nv\n",
     "Ny = length(config.ss)\n",
     "\n",
@@ -805,15 +805,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress:  32%|█████████████                            |  ETA: 0:00:55\u001b[39m"
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:25\u001b[39m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.1484150612095083"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -824,32 +834,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:04:02\u001b[39m\n"
+      "\u001b[32mProgress:  76%|███████████████████████████████▎         |  ETA: 0:01:07\u001b[39m"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.06291244448722508"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Xflowrank, Xalowrank = lowrankvortexassim(enkf, deepcopy(X0), tspan, config, data; \n",
+    "Xflowrank, Xalowrank = lowrankvortexassim(enkf, deepcopy(X0), tspan, config, data; withfreestream  = true, \n",
     "                                                  rxdefault = 10, rydefault = 8, P = serial)\n",
     "rmse_lowrankenkf = mean(norm.(eachcol(mean_hist(Xalowrank)-data.xt))[8000:end]/sqrt(size(data.x0,1)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
