--- a/example2/Low-rank EnKF Vortex.ipynb
+++ b/example2/Low-rank EnKF Vortex.ipynb
@@ -834,15 +834,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress:  76%|███████████████████████████████▎         |  ETA: 0:01:07\u001b[39m"
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:04:37\u001b[39m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.012504023134406943"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
