Finish code comments, moving to notebooks and readme

--- a/example3/Low-rank EnKF Vortex Patch CFD.ipynb
+++ b/example3/Low-rank EnKF Vortex Patch CFD.ipynb
@@ -564,10 +564,9 @@
    "source": [
     "# Run adaptive low rank EnKF with 0.99\n",
     "\n",
-    "@btime begin Xflowrank_99, Xalowrank_99, rxhist_99, ryhist_99 = adaptive_symmetric_lowrankvortexassim(enkf, deepcopy(X0), \n",
+    "Xflowrank_99, Xalowrank_99, rxhist_99, ryhist_99 = adaptive_lowrankenkf_symmetric_vortexassim(enkf, deepcopy(X0), \n",
     "               tspan, config, data; rxdefault = nothing, rydefault = nothing, ratio = 0.99, P = serial, \n",
     "               isadaptive = true)\n",
-    "end\n",
     "\n",
     "mse_lowrank_99 = 0.0\n",
     "\n",
