Some bugs to fix

--- a/localization/Test vortices over cylinder.ipynb
+++ b/localization/Test vortices over cylinder.ipynb
@@ -2197,14 +2197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.667607 seconds (1.15 M allocations: 65.267 MiB, 27.82% gc time, 94.36% compilation time)\n"
+      "  0.122046 seconds (182.22 k allocations: 10.025 MiB, 68.60% compilation time)\n"
      ]
     }
    ],
@@ -2212,7 +2212,7 @@
     "J = zeros(length(config_data.ss), Nx)\n",
     "\n",
     "@time for i=1:config_data.Nv\n",
-    "    dpdzi = dpdzv(config_data.ss, i, cylinder_state_to_lagrange(Xf[end][:,1], config_data))\n",
+    "    dpdzi = dpdzv(config_data.ss, i, cylinder_state_to_lagrange(Xf[end][:,1], config_data); ϵ = config_data.δ)\n",
     "    J[:,3*i-2] .= 2*real(dpdzi)  \n",
     "    J[:,3*i-1] .= -2*imag(dpdzi)\n",
     "    \n",
