Added non-adaptive LREnKF to test notebook

--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -5146,7 +5146,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:12\u001b[39m\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xflr_non, Xalr_non = lowrankenkf_symmetric_vortexassim(lrenkf, \n",
+    "                                                       deepcopy(X0), \n",
+    "                                                       tspan, config, \n",
+    "                                                       data;                                                              \n",
+    "                                                       withfreestream  = true, \n",
+    "                                                       P = serial);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15×1 Matrix{Float64}:\n",
+       "      1.0187293595954376e10\n",
+       "   5865.74987480678\n",
+       "      0.00848992856043795\n",
+       "      2.1793843337300564e10\n",
+       "      0.01942642563311364\n",
+       "      0.008674953609271849\n",
+       "      7.142263534875175e10\n",
+       "      0.018821774736065798\n",
+       "      0.007135489379818768\n",
+       "     -2.9496404388824623e10\n",
+       "      1.410699343827168e6\n",
+       " 632330.5609982727\n",
+       "     -5.380031620362657e9\n",
+       "      0.016233833738735097\n",
+       "      0.008652243003407629"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(Xflr_non[end],dims=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaptive LREnKf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5162,31 +5226,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "15×1 Matrix{Float64}:\n",
-       " 8.023002045977421\n",
-       " 0.31823060277087234\n",
-       " 0.42495291671460067\n",
-       " 6.651117108922594\n",
-       " 1.071297397954152\n",
-       " 0.2698787862766785\n",
-       " 8.080080921330651\n",
-       " 1.3715110860423712\n",
-       " 0.7799613906394887\n",
-       " 6.521379513656509\n",
-       " 1.5994580140076982\n",
-       " 0.07079341434656543\n",
-       " 8.850092497718977\n",
-       " 1.7180835563934929\n",
-       " 0.36335213967719"
+       " 8.385979853066118\n",
+       " 0.34552206949630726\n",
+       " 0.3552155130066204\n",
+       " 6.120802114387938\n",
+       " 1.375332930140945\n",
+       " 0.2583601227940624\n",
+       " 8.26165385596393\n",
+       " 1.1700608084740525\n",
+       " 1.003684662938288\n",
+       " 6.4558911483763\n",
+       " 1.652014783743523\n",
+       " 0.005982932432838433\n",
+       " 9.261828597219994\n",
+       " 1.7679547462667407\n",
+       " 0.39612816077633084"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5204,7 +5268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5218,31 +5282,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "15×1 Matrix{Float64}:\n",
-       "     -7.985492711604797e8\n",
-       " 187535.25071448178\n",
-       "     30.87121408688281\n",
-       "     -1.463861316410383e8\n",
-       "   3460.977539838636\n",
-       "    875.2746297000106\n",
-       "      1.7282591781095333e9\n",
-       "     82.89516863273413\n",
-       "      1.9985234828528418\n",
-       "      2.859581050658349e8\n",
-       "  12000.168536208152\n",
-       "   1093.8624926601622\n",
-       "      5.757844442735748e8\n",
-       "   5350.946398071376\n",
-       "  20904.872945243187"
+       "     -1.4237206446484411e10\n",
+       " 429887.8427839355\n",
+       " 417633.87361458974\n",
+       "      7.870443708100673e9\n",
+       " 821072.1007635295\n",
+       " 449780.0081946212\n",
+       "      3.843504099513385e12\n",
+       "   4673.444967510384\n",
+       "      9.65781039578535e8\n",
+       "      7.410944428571016e8\n",
+       "   2253.7391308231327\n",
+       "      0.12655766265881332\n",
+       "      9.882849715750628e9\n",
+       "    166.63457322621298\n",
+       "      8.636187692012571"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5260,7 +5324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5275,31 +5339,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "15×1 Matrix{Float64}:\n",
-       " 8.594300071127451\n",
-       " 0.7567895855154292\n",
-       " 0.41409025213707845\n",
-       " 6.980789704898652\n",
-       " 0.9525191698021527\n",
-       " 0.3561665293194398\n",
-       " 7.824639776856437\n",
-       " 1.0699019974302149\n",
-       " 0.3826058935004916\n",
-       " 6.691064816036745\n",
-       " 1.1601974534331057\n",
-       " 0.36467212943324784\n",
-       " 6.777406914308374\n",
-       " 1.5075300481987448\n",
-       " 0.34816627576097203"
+       " 8.61922997701929\n",
+       " 0.7432995445424175\n",
+       " 0.41886321177551583\n",
+       " 6.971308575495552\n",
+       " 0.9338489552795579\n",
+       " 0.3568902763737213\n",
+       " 7.793207822982167\n",
+       " 1.1225814445319229\n",
+       " 0.3839883386648211\n",
+       " 6.726956589855789\n",
+       " 1.1921717082367873\n",
+       " 0.3704513554384387\n",
+       " 6.75005440559077\n",
+       " 1.4737373521799175\n",
+       " 0.3472506179014657"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
