Re-named the analysis step function to kalman update

--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -5320,14 +5320,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:04\u001b[39m\n"
+      "┌ Error: Failed to revise /Users/jeff/JuliaProjects/LowRankVortex/src/enkf.jl\n",
+      "│   exception = (ErrorException(\"lowering returned an error, \\$(Expr(:error, \\\"invalid \\\\\\\"...\\\\\\\" on non-final argument around /Users/jeff/JuliaProjects/LowRankVortex/src/enkf.jl:401\\\"))\"), Union{Ptr{Nothing}, Base.InterpreterIP}[])\n",
+      "└ @ Revise /Users/jeff/.julia/packages/Revise/do2nH/src/packagedef.jl:717\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: enkf_kalman_update! not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: enkf_kalman_update! not defined",
+      "",
+      "Stacktrace:",
+      " [1] macro expansion",
+      "   @ ~/JuliaProjects/LowRankVortex/src/enkf.jl:383 [inlined]",
+      " [2] macro expansion",
+      "   @ ~/.julia/packages/ProgressMeter/sN2xr/src/ProgressMeter.jl:938 [inlined]",
+      " [3] enkf(algo::StochEnKFParameters{true}, X::Matrix{Float64}, tspan::Tuple{Float64, Float64}, config::VortexConfig{Nothing, Vector{ComplexF64}}, data::SyntheticData; withfreestream::Bool, P::Serial)",
+      "   @ LowRankVortex ~/JuliaProjects/LowRankVortex/src/enkf.jl:351",
+      " [4] top-level scope",
+      "   @ In[39]:1",
+      " [5] eval",
+      "   @ ./boot.jl:368 [inlined]",
+      " [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1428"
      ]
     }
    ],
