Some further preparation for changing jacobian to new approach

--- a/example2/Low-rank EnKF Vortex simple test.ipynb
+++ b/example2/Low-rank EnKF Vortex simple test.ipynb
@@ -5345,19 +5345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:13\u001b[39m\n"
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:04\u001b[39m\n"
      ]
     }
    ],
    "source": [
-    "Xf, Xa, rxhist, ryhist, Cx_history, Cy_history = enkf(lrenkf_params2,\n",
+    "Xf, Xa, rxhist, ryhist, Cx_history, Cy_history = enkf(enkf_params2,\n",
     "                                                   deepcopy(X0),\n",
     "                                                   tspan, config, \n",
     "                                                   data;                                                             \n",
@@ -5367,31 +5367,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "15×1 Matrix{Float64}:\n",
-       " 8.603741320448451\n",
-       " 0.8914356897787148\n",
-       " 0.4861801656618592\n",
-       " 7.120986999574949\n",
-       " 0.9868657401132382\n",
-       " 0.37711118950510386\n",
-       " 8.173386521697928\n",
-       " 0.9049002355355678\n",
-       " 0.3743243657182332\n",
-       " 6.775692856067219\n",
-       " 1.060100704325647\n",
-       " 0.3930866432389462\n",
-       " 6.81361353379672\n",
-       " 1.4159433509006414\n",
-       " 0.41869396416004856"
+       " 8.619288877150785\n",
+       " 0.8664827381797126\n",
+       " 0.47801142836113886\n",
+       " 7.138680161334197\n",
+       " 0.9639989694290839\n",
+       " 0.38580329863251256\n",
+       " 8.134167275060474\n",
+       " 0.9250132739525327\n",
+       " 0.37367755435015526\n",
+       " 6.757281015313421\n",
+       " 1.0844352006699332\n",
+       " 0.38669423663450025\n",
+       " 6.80747209952084\n",
+       " 1.4252121609881452\n",
+       " 0.4209465468600023"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
